add compliance score filter, improve errors, clean up backend